--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,5 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 style-guide.md
-README-template.md
-README.md
+
+README2222.md
